--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# VENV
+\env
+
+STIGPY3/env/.ptvs/AnalysisLog.txt
+STIGPY3/env/.ptvs/AnalysisLog.txt
